fix: Eliminate UI freeze when closing Herald search window
Fixed critical UI responsiveness issues in Herald search dialog causing slow window closure and post-import freezes.

UI Enhancements:
- Window now closes instantly on first click (< 100ms vs 3000ms+)
- No more freeze after character import operations
- Smooth background cleanup without blocking user interaction
- All import messages now fully multilingual (FR/EN/DE)

Technical Changes:
- Created _stop_search_thread_async() method in HeraldSearchDialog:
  * Thread cleanup via QTimer.singleShot() (non-blocking)
  * Thread reference captured before lambda execution
  * Timeout reduced from 3000ms to 100ms
  * Signal disconnection with exception handling
- Created _async_full_cleanup() method:
  * Complete cleanup executed in background
  * Combines thread stop + temp file cleanup
  * Error handling for destroyed objects
- Refactored closeEvent() implementation:
  * Calls super().closeEvent() IMMEDIATELY (critical fix)
  * Triggers async cleanup via QTimer.singleShot(0)
  * No blocking operations in event handler
- Refactored _import_characters() method:
  * UI refresh via QTimer.singleShot(100ms) after MessageBox
  * Backup operation via QTimer.singleShot(200ms) in lambda wrapper
  * Both operations execute in background (non-blocking)

Root Causes Fixed:
1. closeEvent() called thread.wait(3000) synchronously
    Blocked UI thread for 3 seconds on every close attempt
2. refresh_character_list() executed synchronously after import
    Could take 2-3 seconds with many characters
3. backup_characters_force() executed synchronously after import
    Blocked UI during backup operation
4. super().closeEvent() never called
    Qt couldn't properly close the window

Async Cleanup Pattern:
- QTimer.singleShot(0, cleanup_function) for immediate background execution
- Thread reference capture: thread_ref = self.thread (prevents access to destroyed object)
- Reduced timeout: wait(100) instead of wait(3000)
- Error wrapping

--- a/Language/de.json
+++ b/Language/de.json
@@ -300,5 +300,11 @@
     "progress_stats_complete": "✅ Statistiken abgerufen",
     "progress_character_complete": "✅ Daten abgerufen",
     "progress_cookie_success": "✅ {count} Cookies generiert!",
-    "progress_error": "❌ {error}"
+    "progress_error": "❌ {error}",
+    "herald_import_complete_title": "Import abgeschlossen",
+    "herald_import_success": "✅ {count} Charakter(e) erfolgreich importiert!",
+    "herald_import_updated": "🔄 {count} Charakter(e) aktualisiert!",
+    "herald_import_errors": "⚠️ {count} Fehler:",
+    "herald_import_more_errors": "... und {count} weitere(r) Fehler",
+    "herald_import_no_success": "❌ Keine Charaktere konnten importiert oder aktualisiert werden."
 }
