fix: Fix realm rank comparison and empty update dialog UX issues
Fixed two critical UX issues in the character update comparison system.

UI Enhancements:
- No longer displays empty comparison window when no changes detected
- Shows clear message: Character already up to date
- Realm rank now displays correctly as XLY code (5L9) instead of title text

Technical Changes:
- Added has_changes() method in CharacterUpdateDialog for pre-display verification
- Enhanced _detect_changes() with realm_rank XLY format regex validation (^\d+L\d+$)
- Automatic recalculation from realm_points via data_manager.get_realm_rank_info()
- Consistent comparison between XLY codes only
- Pre-display check in update_from_herald() before exec()

Root Causes Fixed:
1. Realm rank format mismatch (title vs code) causing false positives
2. Empty dialog display without change verification

Translations:
- Added 2 new translation keys in FR/EN/DE:
  * update_char_no_changes_title
  * update_char_already_uptodate

Documentation:
- Updated Changelogs/CHANGELOG_FR.md with v0.109 section (2 bugs fixed)
- Updated Changelogs/CHANGELOG_EN.md with v0.109 section (2 bugs fixed)
- Updated Changelogs/CHANGELOG_SIMPLE_FR.md with v0.109 fixes
- Updated Changelogs/CHANGELOG_SIMPLE_EN.md with v0.109 fixes

Files Modified:
- UI/dialogs.py (CharacterUpdateDialog class)
- Language/fr.json, en.json, de.json (+2 keys each)
- Changelogs/*.md (4 files updated with v0.109)

Impact: Improved UX with accurate realm rank comparison and intelligent dialog display. No more false realm rank updates or empty comparison windows.

--- a/Language/de.json
+++ b/Language/de.json
@@ -93,6 +93,8 @@
     "update_char_progress": "Daten vom Herald werden abgerufen...",
     "update_char_error": "Fehler beim Abrufen der Daten",
     "update_char_no_changes": "Keine Änderungen erkannt. Der Charakter ist bereits aktuell.",
+    "update_char_no_changes_title": "Keine Aktualisierung",
+    "update_char_already_uptodate": "Der Charakter ist bereits aktuell. Keine Änderungen erkannt.",
     "update_char_success": "Charakter erfolgreich aktualisiert!",
     "update_char_cancelled": "Aktualisierung abgebrochen.",
     "duplicate_char_dialog_title": "Charakter duplizieren",
