feat: Add Purple (Dracula) theme and fix incomplete theme switching
Major theme system improvements including new Dracula-inspired theme and complete dynamic theme switching.

UI Enhancements:
- New Purple (Dracula) theme with official Dracula color palette
  * Background #282A36 dark purple-gray
  * Signature purple highlight #BD93F9
  * Pink accent #FF79C6
  * Off-white text #F8F8F2
  * Complete 16-color QPalette configuration
  * Fusion style for cross-platform consistency
- Theme switching now applies instantly to all components
  * Menu bar updates immediately
  * Tree view adapts to new theme colors
  * All dialogs and widgets refresh
  * No application restart required
- FUTURE_IMPROVEMENTS.md file with navigation
  * Overview section with checkboxes
  * Anchor links to detailed descriptions
  * Organized sections for Themes Features Fixes Optimizations Ideas

Technical Changes:
- Created apply_tree_view_style method in TreeManager
  * Dynamic QPalette-based color calculation
  * Automatic theme detection via base_color lightness greater than 128
  * Adaptive grid colors d6d6d6 for light and 404040 for dark
  * Real-time stylesheet application on theme change
- Removed hardcoded colors from configure_tree_view
  * Previously grid_color d6d6d6 and text_color 000000 static
  * Now QPalette dynamic colors with theme-aware calculations
- Enhanced default.json Light theme
  * Added complete stylesheet with palette window references
  * QMenuBar background-color palette window
  * QMenu with palette base and palette highlight
  * Dynamic color adaptation for all menu components
- Enhanced dark.json Dark theme
  * Expanded stylesheet from 200 to 400 chars
  * Added QMenuBar styles with 2D2D30 background
  * QMenu separator and QMenu item padding improvements
- Created Themes purple.json
  * Complete Dracula theme based on official Notepad++ XML
  * 16-color palette with Window Base Highlight etc
  * Comprehensive stylesheet QToolTip QMenuBar QMenu QComboBox
- Added 

--- a/Language/de.json
+++ b/Language/de.json
@@ -62,6 +62,7 @@
     "config_font_scale_label": "Textgröße",
     "theme_light": "Hell",
     "theme_dark": "Dunkel",
+    "theme_purple": "Lila (Dracula)",
     "debug_font_size_menu": "Schrift",
     "font_size_small": "Klein",
     "font_size_medium": "Mittel",
