feat: Add keyboard shortcuts for character creation and Herald search
Implemented keyboard shortcuts for quick access to main application features.

UI Enhancements:
- Added Ctrl+N shortcut for manual character creation
  * Shortcut automatically displayed in File menu next to action name
  * Works globally across the application
- Added Ctrl+F shortcut for Herald character search
  * New menu entry with search icon in File menu with visible shortcut
  * Smart validation management before opening search window

Technical Changes:
- Modified Functions/ui_manager.py:
  * Added setShortcut Ctrl+N to new_char_action in create_menu_bar
  * Added new search_herald_action with setShortcut Ctrl+F
  * Connected to open_herald_search_with_validation method
- New methods in main.py:
  * open_herald_search_with_validation: Main entry point for Ctrl+F
    - Checks if Eden validation thread is running
    - Verifies current Herald connection status
    - Opens search directly if Herald accessible
    - Shows waiting dialog if validation in progress
    - Displays error message if connection failed
  * _show_waiting_for_validation_dialog: Progress dialog management
    - QProgressDialog with cancel button
    - QTimer checking validation status every 500ms
    - Maximum 15 seconds timeout (30 checks x 500ms)
    - Auto-opens search window when validation completes successfully
    - Shows contextual error message if validation fails or times out
    - Does NOT trigger new validation (uses existing startup validation)

Herald Search Validation Flow:
1. User presses Ctrl+F
2. Check if validation thread is running
   - If yes: Show waiting dialog, monitor until completion
3. Check current Herald status
   - If accessible: Open search window immediately
   - If error: Show error message with current status
4. Waiting dialog polls every 500ms for max 15 seconds
5. On success: Auto-open search window
6. On timeout/error: Display appropriate message

Translations:
- Added 7 new translati

--- a/Language/de.json
+++ b/Language/de.json
@@ -123,7 +123,15 @@
     "column_url": "Herald-URL",
     "menu_file": "Datei",
     "menu_file_new_character": "Neuer Charakter",
+    "menu_file_search_herald": "🔍 Im Herald suchen",
     "menu_file_settings": "Einstellungen",
+    "herald_validation_wait_title": "Validierung läuft",
+    "herald_validation_wait_message": "Verbindung zum Eden Herald wird überprüft...\nBitte warten...",
+    "herald_validation_timeout_title": "Zeitüberschreitung",
+    "herald_validation_timeout_message": "Die Eden-Verbindungsvalidierung dauert zu lange.\nBitte überprüfen Sie Ihre Cookies und versuchen Sie es erneut.",
+    "herald_validation_failed_title": "Verbindung fehlgeschlagen",
+    "herald_validation_failed_message": "Verbindung zum Eden Herald nicht möglich.\n\nStatus: {status}\n\nBitte überprüfen Sie Ihre Cookies im Menü Extras.",
+    "cancel": "Abbrechen",
     "menu_action": "Aktion",
     "menu_action_resistances": "📊 Widerstände",
     "menu_action_armor_management": "📁 Rüstungsverwaltung",
