--- a/Language/en.json
+++ b/Language/en.json
@@ -122,7 +122,15 @@
     "column_url": "Herald URL",
     "menu_file": "File",
     "menu_file_new_character": "New Character",
+    "menu_file_search_herald": "🔍 Search on Herald",
     "menu_file_settings": "Settings",
+    "herald_validation_wait_title": "Validation in Progress",
+    "herald_validation_wait_message": "Checking connection to Eden Herald...\nPlease wait...",
+    "herald_validation_timeout_title": "Timeout",
+    "herald_validation_timeout_message": "Eden connection validation is taking too long.\nPlease check your cookies and try again.",
+    "herald_validation_failed_title": "Connection Failed",
+    "herald_validation_failed_message": "Unable to connect to Eden Herald.\n\nStatus: {status}\n\nPlease check your cookies in the Tools menu.",
+    "cancel": "Cancel",
     "menu_action": "Action",
     "menu_action_resistances": "📊 Resistances",
     "menu_action_armor_management": "📁 Armor Management",
