--- a/Language/fr.json
+++ b/Language/fr.json
@@ -130,7 +130,15 @@
     "columns_config_saved": "Configuration des colonnes sauvegardée.",
     "menu_file": "Fichier",
     "menu_file_new_character": "Nouveau Personnage",
+    "menu_file_search_herald": "🔍 Rechercher sur Herald",
     "menu_file_settings": "Paramètres",
+    "herald_validation_wait_title": "Validation en cours",
+    "herald_validation_wait_message": "Vérification de la connexion au Herald Eden...\nVeuillez patienter...",
+    "herald_validation_timeout_title": "Délai dépassé",
+    "herald_validation_timeout_message": "La validation de la connexion Eden prend trop de temps.\nVeuillez vérifier vos cookies et réessayer.",
+    "herald_validation_failed_title": "Connexion impossible",
+    "herald_validation_failed_message": "Impossible de se connecter au Herald Eden.\n\nStatut: {status}\n\nVeuillez vérifier vos cookies dans le menu Outils.",
+    "cancel": "Annuler",
     "menu_action": "Action",
     "menu_action_resistances": "📊 Résistances",
     "menu_action_armor_management": "📁 Gestion des armures",
