refactor(settings): Complete settings dialog reorganization with navigation sidebar
- Created modern settings dialog with sidebar navigation (7 sections)
- Moved settings from old dialog to organized sections:
  * General: Paths (Characters, Config, Armor) + Defaults + Language
  * Themes: Theme selection + Font scale (separated)
  * Startup: Disclaimer message option
  * Columns: Column resize mode + Visibility checkboxes
  * Herald Eden: Cookies path + Browser settings
  * Backup: Placeholder for future implementation
  * Debug: Log folder + Debug app options + Eden debug button

- Added keyboard shortcuts: Ctrl+S for Settings
- Removed deprecated menus: View > Columns, Help > Eden Debug
- Updated all translations (FR/EN/DE) for new sections
- Non-modal resizable window with maximize button
- Navigation icons: ️

--- a/Language/de.json
+++ b/Language/de.json
@@ -27,7 +27,54 @@
     "about_message_title": "Über {app_name}",
     "about_message_content": "Version: {version}",
     "configuration_menu_label": "Einstellungen",
-    "configuration_window_title": "Konfigurationsfenster",
+    "configuration_window_title": "Einstellungen",
+    "settings_nav_general": "Allgemein",
+    "settings_nav_themes": "Themen",
+    "settings_nav_startup": "Start",
+    "settings_nav_columns": "Spalten",
+    "settings_nav_herald": "Herald Eden",
+    "settings_nav_backup": "Sicherungen",
+    "settings_nav_data": "Daten",
+    "settings_nav_language": "Sprache",
+    "settings_nav_debug": "Debug",
+    "settings_general_title": "Allgemeine Einstellungen",
+    "settings_general_subtitle": "Ordnerpfade und Standardwerte",
+    "settings_themes_title": "Themen & Anzeige",
+    "settings_themes_subtitle": "Anpassung der Benutzeroberfläche",
+    "settings_startup_title": "Start",
+    "settings_startup_subtitle": "Anwendungsstartoptionen",
+    "settings_startup_info": "Die Warnmeldung erinnert daran, dass das Scraping von Herald Eden vernünftig durchgeführt werden sollte.\n\nEs wird empfohlen, diese Nachricht aktiviert zu lassen.",
+    "config_startup_group_title": "Startoptionen",
+    "settings_columns_title": "Spalten",
+    "settings_columns_subtitle": "Konfiguration der Spaltenanzeige",
+    "config_column_resize_group_title": "Größenveränderungsmodus",
+    "config_column_visibility_group_title": "Spaltensichtbarkeit",
+    "settings_herald_title": "Herald Eden",
+    "settings_herald_subtitle": "Herald-Verbindungskonfiguration",
+    "settings_herald_info": "Um Ihre Herald-Cookies zu verwalten, verwenden Sie die Schaltfläche in der Eden-Statusleiste.",
+    "settings_backup_title": "Sicherungen",
+    "settings_backup_subtitle": "Konfiguration automatischer Sicherungen",
+    "settings_backup_placeholder": "Sicherungseinstellungen werden im Menü Extras > Sicherungen verwaltet.\n\nDieser Abschnitt wird in einer zukünftigen Version entwickelt.",
+    "settings_data_title": "Datenverwaltung",
+    "settings_data_subtitle": "Datendateien und Rüstungspfade",
+    "settings_data_info": "Datendateien (Klassen, Rassen, Realm-Ränge usw.) befinden sich im Data/-Ordner des Programms.\n\nUm diese Daten zu ändern, verwenden Sie das Menü Extras > Daten-Manager.",
+    "settings_language_title": "Sprache",
+    "settings_language_subtitle": "Auswahl der Benutzeroberflächensprache",
+    "settings_language_restart_info": "Das Ändern der Sprache erfordert einen Neustart der Anwendung, um vollständig wirksam zu werden.",
+    "settings_debug_title": "Debug",
+    "settings_debug_subtitle": "Debug-Optionen für die Diagnose",
+    "settings_debug_info": "Der Debug-Modus ist nützlich zur Diagnose von Problemen.\n\nDebug-Protokolle werden im Logs/-Ordner gespeichert",
+    "config_paths_group_title": "Ordnerpfade",
+    "config_defaults_group_title": "Standardwerte",
+    "config_theme_group_title": "Themenauswahl",
+    "config_columns_group_title": "Spaltenverwaltung",
+    "config_cookies_group_title": "Cookies-Pfad",
+    "config_browser_group_title": "Browser",
+    "config_eden_debug_group_title": "Eden-Debugging",
+    "config_preferred_browser_label": "Bevorzugter Browser:",
+    "config_allow_browser_download_label": "Automatischen Treiber-Download zulassen",
+    "config_armor_group_title": "Rüstung",
+    "config_language_group_title": "Anwendungssprache",
     "config_window_content": "Konfigurationsoptionen werden hier sein.",
     "config_path_label": "Charakterverzeichnis",
     "browse_button": "Durchsuchen...",
@@ -52,6 +99,9 @@
     "config_paths_group_title": "Ordnerpfade",
     "config_general_group_title": "Allgemeine Einstellungen",
     "config_debug_group_title": "Debug",
+    "config_log_folder_group_title": "Logs-Ordner",
+    "config_debug_app_group_title": "Anwendungs-Debug",
+    "config_debug_eden_group_title": "Eden-Debug",
     "language_name": "Deutsch",
     "config_show_debug_window_label": "Debug-Fenster beim Start anzeigen",
     "debug_window_title": "Debug-Konsole",
@@ -59,6 +109,7 @@
     "debug_level_all": "DEBUG",
     "status_bar_loaded": "Bereit. Geladen in {duration:.2f} Sekunden.",
     "config_theme_label": "Thema",
+    "config_font_group_title": "Textgröße",
     "config_font_scale_label": "Textgröße",
     "theme_light": "Hell",
     "theme_dark": "Dunkel",
@@ -122,9 +173,9 @@
     "column_race": "Rasse",
     "column_url": "Herald-URL",
     "menu_file": "Datei",
-    "menu_file_new_character": "Neuer Charakter",
+    "menu_file_new_character": "➕ Neuer Charakter",
     "menu_file_search_herald": "🔍 Im Herald suchen",
-    "menu_file_settings": "Einstellungen",
+    "menu_file_settings": "⚙️ Einstellungen",
     "herald_validation_wait_title": "Validierung läuft",
     "herald_validation_wait_message": "Verbindung zum Eden Herald wird überprüft...\nBitte warten...",
     "herald_validation_timeout_title": "Zeitüberschreitung",
