--- a/Language/en.json
+++ b/Language/en.json
@@ -26,7 +26,54 @@
     "about_message_title": "About {app_name}",
     "about_message_content": "Version: {version}",
     "configuration_menu_label": "Settings",
-    "configuration_window_title": "Settings Window",
+    "configuration_window_title": "Settings",
+    "settings_nav_general": "General",
+    "settings_nav_themes": "Themes",
+    "settings_nav_startup": "Startup",
+    "settings_nav_columns": "Columns",
+    "settings_nav_herald": "Herald Eden",
+    "settings_nav_backup": "Backups",
+    "settings_nav_data": "Data",
+    "settings_nav_language": "Language",
+    "settings_nav_debug": "Debug",
+    "settings_general_title": "General Settings",
+    "settings_general_subtitle": "Folder paths and default values",
+    "settings_themes_title": "Themes & Display",
+    "settings_themes_subtitle": "Interface customization",
+    "settings_startup_title": "Startup",
+    "settings_startup_subtitle": "Application startup options",
+    "settings_startup_info": "The warning message reminds that scraping the Herald Eden should be done reasonably.\n\nIt is recommended to keep this message enabled.",
+    "config_startup_group_title": "Startup Options",
+    "settings_columns_title": "Columns",
+    "settings_columns_subtitle": "Column display configuration",
+    "config_column_resize_group_title": "Resize Mode",
+    "config_column_visibility_group_title": "Column Visibility",
+    "settings_herald_title": "Herald Eden",
+    "settings_herald_subtitle": "Herald connection configuration",
+    "settings_herald_info": "To manage your Herald cookies, use the button in the Eden status bar.",
+    "settings_backup_title": "Backups",
+    "settings_backup_subtitle": "Automatic backup configuration",
+    "settings_backup_placeholder": "Backup settings are managed in Tools > Backups menu.\n\nThis section will be developed in a future version.",
+    "settings_data_title": "Data Management",
+    "settings_data_subtitle": "Data files and armor paths",
+    "settings_data_info": "Data files (classes, races, realm ranks, etc.) are located in the program's Data/ folder.\n\nTo modify this data, use the Tools > Data Manager menu.",
+    "settings_language_title": "Language",
+    "settings_language_subtitle": "Interface language selection",
+    "settings_language_restart_info": "Changing the language will require restarting the application to take full effect.",
+    "settings_debug_title": "Debug",
+    "settings_debug_subtitle": "Debugging options for diagnostics",
+    "settings_debug_info": "Debug mode is useful for diagnosing issues.\n\nDebug logs are saved in the Logs/ folder",
+    "config_paths_group_title": "Folder Paths",
+    "config_defaults_group_title": "Default Values",
+    "config_theme_group_title": "Theme Selection",
+    "config_columns_group_title": "Column Management",
+    "config_cookies_group_title": "Cookies Path",
+    "config_browser_group_title": "Browser",
+    "config_eden_debug_group_title": "Eden Debugging",
+    "config_preferred_browser_label": "Preferred browser:",
+    "config_allow_browser_download_label": "Allow automatic driver download",
+    "config_armor_group_title": "Armor",
+    "config_language_group_title": "Application Language",
     "config_window_content": "Configuration options will be here.",
     "config_path_label": "Character Directory",
     "browse_button": "Browse...",
@@ -51,6 +98,9 @@
     "config_paths_group_title": "Folder Paths",
     "config_general_group_title": "General Settings",
     "config_debug_group_title": "Debug",
+    "config_log_folder_group_title": "Logs Folder",
+    "config_debug_app_group_title": "Application Debug",
+    "config_debug_eden_group_title": "Eden Debug",
     "language_name": "English",
     "config_show_debug_window_label": "Show debug window on startup",
     "debug_window_title": "Debug Console",
@@ -58,7 +108,8 @@
     "debug_level_all": "DEBUG",
     "status_bar_loaded": "Ready. Loaded in {duration:.2f} seconds.",
     "config_theme_label": "Theme",
-    "config_font_scale_label": "Text size",
+    "config_font_group_title": "Text Size",
+    "config_font_scale_label": "Text Size",
     "theme_light": "Light",
     "theme_dark": "Dark",
     "theme_purple": "Purple (Dracula)",
@@ -121,9 +172,9 @@
     "column_race": "Race",
     "column_url": "Herald URL",
     "menu_file": "File",
-    "menu_file_new_character": "New Character",
+    "menu_file_new_character": "➕ New Character",
     "menu_file_search_herald": "🔍 Search on Herald",
-    "menu_file_settings": "Settings",
+    "menu_file_settings": "⚙️ Settings",
     "herald_validation_wait_title": "Validation in Progress",
     "herald_validation_wait_message": "Checking connection to Eden Herald...\nPlease wait...",
     "herald_validation_timeout_title": "Timeout",
