--- a/Language/fr.json
+++ b/Language/fr.json
@@ -27,7 +27,54 @@
     "about_message_title": "À propos de {app_name}",
     "about_message_content": "Version : {version}",
     "configuration_menu_label": "Configuration",
-    "configuration_window_title": "Fenêtre de Configuration",
+    "configuration_window_title": "Paramètres",
+    "settings_nav_general": "Général",
+    "settings_nav_themes": "Thèmes",
+    "settings_nav_startup": "Démarrage",
+    "settings_nav_columns": "Colonnes",
+    "settings_nav_herald": "Herald Eden",
+    "settings_nav_backup": "Sauvegardes",
+    "settings_nav_data": "Données",
+    "settings_nav_language": "Langue",
+    "settings_nav_debug": "Debug",
+    "settings_general_title": "Paramètres Généraux",
+    "settings_general_subtitle": "Chemins des dossiers et valeurs par défaut",
+    "settings_themes_title": "Thèmes & Affichage",
+    "settings_themes_subtitle": "Personnalisation de l'interface",
+    "settings_startup_title": "Démarrage",
+    "settings_startup_subtitle": "Options de démarrage de l'application",
+    "settings_startup_info": "Le message d'avertissement rappelle que le scraping du Herald Eden doit être fait de manière raisonnable.\n\nIl est recommandé de garder ce message activé.",
+    "config_startup_group_title": "Options de démarrage",
+    "settings_columns_title": "Colonnes",
+    "settings_columns_subtitle": "Configuration de l'affichage des colonnes",
+    "config_column_resize_group_title": "Mode de redimensionnement",
+    "config_column_visibility_group_title": "Visibilité des colonnes",
+    "settings_herald_title": "Herald Eden",
+    "settings_herald_subtitle": "Configuration de la connexion au Herald",
+    "settings_herald_info": "Pour gérer vos cookies Herald, utilisez le bouton dans la barre d'état Eden.",
+    "settings_backup_title": "Sauvegardes",
+    "settings_backup_subtitle": "Configuration des sauvegardes automatiques",
+    "settings_backup_placeholder": "Les paramètres de sauvegarde sont gérés dans le menu Outils > Sauvegardes.\n\nCette section sera développée dans une future version.",
+    "settings_data_title": "Gestion des Données",
+    "settings_data_subtitle": "Chemins des fichiers de données et armures",
+    "settings_data_info": "Les fichiers de données (classes, races, realm ranks, etc.) sont situés dans le dossier Data/ du programme.\n\nPour modifier ces données, utilisez le menu Outils > Data Manager.",
+    "settings_language_title": "Langue",
+    "settings_language_subtitle": "Sélection de la langue de l'interface",
+    "settings_language_restart_info": "Le changement de langue nécessitera un redémarrage de l'application pour être pleinement effectif.",
+    "settings_debug_title": "Debug",
+    "settings_debug_subtitle": "Options de débogage pour le diagnostic",
+    "settings_debug_info": "Le mode debug est utile pour diagnostiquer des problèmes.\n\nLes logs de debug sont sauvegardés dans le dossier Logs/",
+    "config_paths_group_title": "Chemins des dossiers",
+    "config_defaults_group_title": "Valeurs par défaut",
+    "config_theme_group_title": "Sélection du thème",
+    "config_columns_group_title": "Gestion des colonnes",
+    "config_cookies_group_title": "Chemin des cookies",
+    "config_browser_group_title": "Navigateur",
+    "config_eden_debug_group_title": "Débogage Eden",
+    "config_preferred_browser_label": "Navigateur préféré:",
+    "config_allow_browser_download_label": "Autoriser le téléchargement automatique de drivers",
+    "config_armor_group_title": "Armures",
+    "config_language_group_title": "Langue de l'application",
     "config_window_content": "Les options de configuration seront ici.",
     "config_path_label": "Répertoire des personnages",
     "browse_button": "Parcourir...",
@@ -52,6 +99,9 @@
     "config_paths_group_title": "Chemins des dossiers",
     "config_general_group_title": "Paramètres généraux",
     "config_debug_group_title": "Debug",
+    "config_log_folder_group_title": "Dossier des logs",
+    "config_debug_app_group_title": "Debug Application",
+    "config_debug_eden_group_title": "Debug Eden",
     "language_name": "Français",
     "config_show_debug_window_label": "Afficher la fenêtre de débogage au démarrage",
     "debug_window_title": "Console de débogage",
@@ -59,6 +109,7 @@
     "debug_level_all": "DEBUG",
     "status_bar_loaded": "Prêt. Chargé en {duration:.2f} secondes.",
     "config_theme_label": "Thème",
+    "config_font_group_title": "Taille du texte",
     "config_font_scale_label": "Taille du texte",
     "theme_light": "Clair",
     "theme_dark": "Sombre",
@@ -129,9 +180,9 @@
     "columns_deselect_all": "Tout désélectionner",
     "columns_config_saved": "Configuration des colonnes sauvegardée.",
     "menu_file": "Fichier",
-    "menu_file_new_character": "Nouveau Personnage",
+    "menu_file_new_character": "➕ Nouveau Personnage",
     "menu_file_search_herald": "🔍 Rechercher sur Herald",
-    "menu_file_settings": "Paramètres",
+    "menu_file_settings": "⚙️ Paramètres",
     "herald_validation_wait_title": "Validation en cours",
     "herald_validation_wait_message": "Vérification de la connexion au Herald Eden...\nVeuillez patienter...",
     "herald_validation_timeout_title": "Délai dépassé",
